<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:padding="15dp"
    android:background="@drawable/alert_dialog_background">

    <TextView
        android:id="@+id/resend_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_email"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/resend_verification_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="5dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/resend_verification_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="5dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/dialog_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SEND"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>
